2007-12-21	Xi Yang <hiyangxi@gmail.com>

	* configure.ac, score/include/rtems/score/coremutex.h,
	score/include/rtems/score/thread.h,
	score/inline/rtems/score/coremutex.inl,
	score/src/coremutexsurrender.c, score/src/threadinitialize.c: Add
	support for proper stacking of priority inheritance on mutexes as
	well as enforce proper order of release.

2007-12-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1268/cpukit
	* libcsupport/include/rtems/assoc.h: There is no
	rtems_assoc_ptr_by_value method.

2007-12-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/sync.c: Make sync() POSIX-compliant.
	* libcsupport/src/__gettod.c: Make gettimeofday() POSIX-compliant.

2007-12-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/killinfo.c: Clean up and eliminate some dead code paths.

2007-12-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/include/rtems/posix/timer.h: Include rtems/score/object.h.

2007-12-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/Makefile.am, rtems/include/rtems/rtems/tasks.h: Add
	rtems_task_self() directive.
	* rtems/src/taskself.c: New file.

2007-12-20	Jennifer Averett <jennifer.averett@OARcorp.com>

	* posix/Makefile.am, posix/src/kill.c, posix/src/killinfo.c: Split file
	and resolved copyright information.
	* posix/src/kill_r.c: New file.

2007-12-20	Jennifer Averett <jennifer.averett@OARcorp.com>

	* posix/src/ualarm.c: Fixed bug where iteration did not work correctly.

2007-12-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sapi/include/confdefs.h: Revert. Requires info not available at
	preprocessing time.

2007-12-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sapi/include/confdefs.h: Catch the error when the user lowers the
	maximum number of drivers below the number of statically configured
	ones.

2007-12-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sapi/src/extension.c, sapi/src/extensioncreate.c,
	sapi/src/extensiondelete.c, sapi/src/extensionident.c: Extension